force-app/main/default/objects/Matters__c/Matters__c.object-meta.xml
<CustomObject>
    <label>Matters</label>
    <nameField>
        <label>Matters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>