force-app/main/default/objects/Matters__c/fields/Matter_Name__c.field-meta.xml
<CustomField>
    <fullName>Matter_Name__c</fullName>
    <label>Matter Name</label>
    <length>9</length>
    <type>Text</type>
</CustomField>