force-app/main/default/objects/Matters__c/fields/Matter_Time__c.field-meta.xml
<CustomField>
    <fullName>Matter_Time__c</fullName>
    <label>Matter Time</label>
    <type>DateTime</type>
</CustomField>