force-app/main/default/objects/Matters__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <label>Permission</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Everyone</fullName>
                <default>true</default>
                <label>Everyone</label>
            </value>
            <value>
                <fullName>Me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>